<resources>

    <string name="app_name">Muninn Matching</string>

    <!-- User Account -->
    <string name="enter_birth">Enter Birthday (00/00/0000)</string>
    <string name="enter_description">Tell us a little about yourself</string>
    <string name="enter_name">"First and Last Name"</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="goto_login">Already Have An Account? \n Click to Login</string>
    <string name="signout_text">Sign out</string>
    <string name="login_text">Login with Google</string>
    <string name="enter_full_name">Enter First and Last Name</string>
    <string name="reset_password">Reset Password</string>

    <!-- Other -->
    <string name="continue_text">Continue</string>
    <string name="go_back">Back</string>

    <!-- Tags -->
    <string name="tag_title">User Tags</string>

    <string name="account_tag1">Tag 1: </string>
    <string name="account_tag2">Tag 2: </string>
    <string name="account_tag3">Tag 3: </string>

    <string name="edit_tag">Edit Tag</string>

    <string-array name="Platform_list">
        <item> </item>
        <item>Atari</item>
        <item>Microsoft</item>
        <item>Nintendo</item>
        <item>Sega</item>
        <item>Sony</item>
    </string-array>

    <string-array name="Genre_list">
        <item> </item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Beat-em Up</item>
        <item>Fighter</item>
        <item>First-person Shooter</item>
        <item>Horror</item>
        <item>Idle</item>
        <item>Interactive</item>
        <item>Multi-player</item>
        <item>Musical</item>
        <item>Offline</item>
        <item>Puzzle</item>
        <item>Role-Playing</item>
        <item>Single-player</item>
        <item>Simulation</item>
        <item>Sports</item>
        <item>Strategy</item>
        <item>Survival</item>
        <item>Virtual Reality</item>
    </string-array>

    <!-- Messages -->
    <string name="message_start">Start A Message!</string>
    <string name="message_list">Messages List</string>


    <!-- Search -->
    <string name="search_title">Start Searching Now! \n Meet New People!</string>

    <!-- Account -->
    <string name="change_profile">Change Profile Photo</string>
    <string name="account_name">Name</string>
    <string name="account_bio">Bio</string>
    <string name="account_email">Email</string>
    <string name="account_city">City: </string>
    <string name="account_state">State: </string>
    <string name="edit_txt_btn">Edit Information</string>
    <string name="edit_name">Enter Username</string>
    <string name="hyphen"> -- </string>
    <string name="edit_city">Enter City</string>

    <string-array name="edit_state_list">
        <item> </item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <!-- Matches -->
    <string name="matches_title">Connect With Your Matches!</string>
    <string name="matches_new">New Matches</string>
    <string name="matches_old">Previous Matches</string>
    <string name="matches_connect">Send user A Message!</string>

    <!-- Displays -->
    <string name="welcome_text">Welcome to Muninn Matchmaking</string>
    <string name="start_searching">Start Searching</string>
    <string name="get_started">"Let's Get Started!"</string>
    <string name="tag_info">Meet people with similar interests by selecting the tags which best fit your interest!</string>

    <!-- Navigation Titles -->
    <string name="title_tags">Tags</string>
    <string name="title_matches">Matches</string>
    <string name="title_search">Search</string>
    <string name="title_messages">Messages</string>
    <string name="title_account">Account</string>


    <!-- Nav -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="appbar_scrolling_view_behavior">a</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_matches">Matches</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Matches</item>
        <item>Messages</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!-- Set Up Profile -->
    <string name="SetUpHeader">Set Up Profile</string>

    <string name="setUsername">Enter your username</string>

    <string name="showEmail">Email: </string>

    <string name="setCity">Enter your city</string>

    <string name="setState">State: </string>

    <string-array name="state_names">
        <item> </item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="tagPlatform_list">
        <item> </item>
        <item>Atari</item>
        <item>Microsoft</item>
        <item>Nintendo</item>
        <item>Sega</item>
        <item>Sony</item>
    </string-array>

    <string-array name="tagGenre_list">
        <item> </item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Beat-em Up</item>
        <item>Fighter</item>
        <item>First-person Shooter</item>
        <item>Horror</item>
        <item>Idle</item>
        <item>Interactive</item>
        <item>Multi-player</item>
        <item>Musical</item>
        <item>Offline</item>
        <item>Puzzle</item>
        <item>Role-Playing</item>
        <item>Single-player</item>
        <item>Simulation</item>
        <item>Sports</item>
        <item>Strategy</item>
        <item>Survival</item>
        <item>Virtual Reality</item>
    </string-array>

    <string name="addTag">+ Add a new tag</string>

    <string name="setTag">Save Tag</string>

    <string name="add_interests">Add Interests:</string>

    <string name="tag1text">Tag 1: </string>

    <string name="tag2text">Tag 2: </string>

    <string name="tag3text">Tag 3: </string>

    <string name="select_platform">Select platform: </string>

    <string name="select_genre">Select Genre: </string>

    <string name="states_button">--State--</string>

    <string name="platform_button">--Platform--</string>

    <string name="genre_button">--Genre--</string>

    <string name="continue_btn">Continue</string>

    <string name="confirm_btn">Confirm</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
