<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_tags"
        android:icon="@drawable/ic_check_box_24px"
        android:title="@string/title_tags" />

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_favorite_border_24px"
        android:title="@string/title_matches" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_24px"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_24px"
        android:title="@string/title_account" />

</menu>