<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_account_circle_24px"
        app:civ_border_color="@color/backgroundText"
        app:civ_border_width="2dp"
        app:civ_fill_color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050" />

    <Button
        android:id="@+id/account_change_profile"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/screenBackground"
        android:text="@string/change_profile"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintVertical_bias="0.018" />



    <!-- TextViews -->

    <TextView
        android:id="@+id/account_name"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/account_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_change_profile" />
    <TextView
        android:id="@+id/placeholder_username"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/hyphen"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/account_change_profile"/>
    <TextView
        android:id="@+id/account_email"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/account_email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_name" />


    <TextView
        android:id="@+id/placeholder_email"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/hyphen"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/account_email"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_username"/>

    <TextView
        android:id="@+id/account_city"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/account_city"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_email" />
    <TextView
        android:id="@+id/placeholder_city"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/hyphen"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/account_city"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_email"/>
    <TextView
        android:id="@+id/account_state"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/account_state"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_city" />
    <TextView
        android:id="@+id/placeholder_state"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/hyphen"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/account_state"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_city"/>


    <!-- EditViews -->

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/edit_name"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/backgroundText"
        android:textColorHint="@color/backgroundText"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/account_change_profile" />


    <EditText
        android:id="@+id/edit_city"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/edit_city"
        android:inputType="textEmailAddress"
        android:textColor="@color/backgroundText"
        android:textColorHint="@color/backgroundText"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/account_city"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_email" />

    <Spinner
        android:id="@+id/edit_state_list"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:dropDownHeight="25dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/account_state"
        app:layout_constraintTop_toBottomOf="@+id/edit_city" />




    <Button
        android:id="@+id/confirm_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="0dp"
        android:background="@color/screenBackground"
        android:text="@string/confirm_btn"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:visibility="gone"/>

    <Button
        android:id="@+id/edit_account"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/screenBackground"
        android:text="@string/edit_txt_btn"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/account_logout"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/screenBackground"
        android:text="@string/action_logout"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/edit_account"  />

</androidx.constraintlayout.widget.ConstraintLayout>